tests/snapshots/errors/return_type_mismatch.mc
fun get_value() -> int {
    return "hello";
}
